@startuml Jogo RPG - Diagrama de Classes

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam packageStyle rectangle

package "testeJogo03_Pessoal.Players" {
    class Jogo {
        + {static} main(args: String[]) : void
    }

    class CriadorDePersonagemException {
        + CriadorDePersonagemException(message: String)
        + CriadorDePersonagemException(message: String, cause: Throwable)
    }

    class CriadordePersonagem {
        - player : Personagem
        - oponente : Personagem
        - sc : Scanner
        - habilidadesSelecionadas : List<String>
        + CriadordePersonagem(player: Personagem, oponente: Personagem) throws CriadorDePersonagemException
        - classeEscolha() : void
        - realizarEscolhas() : void
        - lerOpcaoValida(min: int, max: int) : int
    }

    class SistemaHabilidades {
        + habilidadesDisponiveis : List<Habilidade>
        + habilidadesEscolhidas : List<Habilidade>
        - sc : Scanner
        + SistemaHabilidades(personagem: Personagem, oponente: Personagem)
        + SistemaHabilidades(personagem: Personagem, oponente: Personagem, autoEscolha: boolean)
        + SistemaHabilidades(personagem: Personagem, oponente: Personagem, escolhas: List<String>)
        + escolherHabilidades() : void
        + escolherHabilidadesPorNome(escolhas: List<String>) : void
    }

    class Habilidade {
        + nome : String
        + descricao : String
        + acao : Runnable
        + Habilidade(nome: String, descricao: String, acao: Runnable)
        + toString() : String
    }

    class ListaHabilidades {
        # personagem : Personagem
        # oponente : Personagem
        # dadoClass : Dado
        - sc : Scanner
        + ListaHabilidades(personagem: Personagem, oponente: Personagem)
    }

    class "ListaHabilidades.Mago" as LH_Mago {
    }

    class "ListaHabilidades.Mago.Fogo" as LH_Fogo {
        + bolaDeFogo() : void
        + circuloDeIncineracao() : void
        + fenix() : void
        + muralhaDeChamas() : void
        + explosaoFlamejante() : void
        + armaduraIgnea() : void
    }

    class "ListaHabilidades.Mago.Gelo" as LH_Gelo {
        + tempestadeDeGelo() : void
        + prisaoGlacial() : void
        + iceAge() : void
        + laminasDeGelo() : void
        + barreiraDeGelo() : void
        + congelamentoProfundo() : void
    }

    class "ListaHabilidades.Mago.Necromancia" as LH_Necromancia {
        + putrefacao() : void
        + ergaSe() : void
        + condenado() : void
        + sifaoDeVida() : void
        + maldicaoDaSepultura() : void
        + ossosProtetores() : void
    }

    class "ListaHabilidades.SkillsBarbaro" as LH_Barbaro {
        + furia() : void
        + ataque() : void
        + investidaBrutal() : void
        + peleDeFerro() : void
        + gritoDeGuerra() : void
        + retaliacao() : void
    }

    class "ListaHabilidades.Cacador.Arqueiro" as LH_Arqueiro {
        + tiroDeFlecha() : void
        + marcaDoCacador() : void
        + chuvaDeFlechas() : void
        + flechaPerfurante() : void
        + armadilhaDeCaca() : void
        + recuoAgil() : void
        + tiroDePrecisao() : void
    }

    class "ListaHabilidades.Cacador.Pistoleiro" as LH_Pistoleiro {
        + tiroRapido() : void
        + saqueRelampago() : void
        + balaRicochete() : void
        + tiroDePrecisao() : void
        + coberturaTatica() : void
        + execucao() : void
    }
}

package "testeJogo03_Pessoal.Players.Classes" {
    class Personagem {
        + vida : int
        + vidaMaxima : int
        + ca : int
        # pe : int
        + peMaxima : int
        + vantagem : String
        + bonusCaTemporario : int
        + paralizado : boolean
        + zumbisInvocados : int
        + Personagem(vida: int, ca: int, pe: int, vantagem: String)
        + descansar() : void
        + getPe() : int
        + alterarPe(delta: int) : void
        + alterarVidaMaxima(delta: int) : void
        + getCaEfetivo() : int
        + tentarGastarPe(custo: int) : boolean
        + setHabilidades(habilidades: SistemaHabilidades) : void
        + getHabilidades() : SistemaHabilidades
        + receberDano(danoBruto: int) : void
        + acao() : void
    }

    class Barbaro {
        + Barbaro(oponente: Personagem)
        + acao() : void
    }

    class Cacador {
        + Cacador(oponente: Personagem)
        + acao() : void
    }

    class "Cacador.Arqueiro" as Arqueiro {
        + Arqueiro(oponente: Personagem)
        + acao() : void
        + recarregar() : void
    }

    class "Cacador.Pistoleiro" as Pistoleiro {
        + Pistoleiro(oponente: Personagem)
        + acao() : void
        + recarregar() : void
    }

    class Mago {
        # oponente : Personagem
        + Mago(oponente: Personagem)
    }

    class "Mago.MagoFogo" as MagoFogo {
        + MagoFogo(oponente: Personagem)
        + acao() : void
    }

    class "Mago.MagoGelo" as MagoGelo {
        + MagoGelo(oponente: Personagem)
        + acao() : void
    }

    class "Mago.Necromante" as Necromante {
        + Necromante(oponente: Personagem)
        + acao() : void
    }
}

Personagem <|-- Barbaro
Personagem <|-- Cacador
Personagem <|-- Mago
Cacador <|-- Arqueiro
Cacador <|-- Pistoleiro
Mago <|-- MagoFogo
Mago <|-- MagoGelo
Mago <|-- Necromante

Jogo ..> CriadordePersonagem : cria
Jogo o-- Personagem : player / oponente
CriadordePersonagem o-- Personagem : player / oponente
CriadordePersonagem ..> SistemaHabilidades : cria e atribui
SistemaHabilidades o-- Habilidade : habilidadesDisponiveis
SistemaHabilidades o-- Habilidade : habilidadesEscolhidas
SistemaHabilidades ..> ListaHabilidades : usa
ListaHabilidades +-- LH_Mago
LH_Mago +-- LH_Fogo
LH_Mago +-- LH_Gelo
LH_Mago +-- LH_Necromancia
ListaHabilidades +-- LH_Barbaro
ListaHabilidades +-- LH_Arqueiro
ListaHabilidades +-- LH_Pistoleiro
Personagem o-- SistemaHabilidades : habilidades

@enduml
